--- a/project1/webapp/view/Facilitis.view.xml
+++ b/project1/webapp/view/Facilitis.view.xml
@@ -80,14 +80,15 @@
 			<Table
                 id="id_facilityTable"
                 sticky="ColumnHeaders,HeaderToolbar"
-                mode="SingleSelectLeft"
+                mode="MultiSelect"
                 width="auto"
                 busyIndicatorDelay="0"
                 class="sapUiResponsiveMargin"
-                items="{path: 'Facilities>/'}">
+				items="{path: 'Facilities>/', sorter: {path: 'BranchCode',descending: false,group: true}}"
+                >
 				<headerToolbar>
 					<OverflowToolbar>
-						<Title text="facilities ({=${Facilities>/}.length})" />
+						<Title text="Facilities ({=${Facilities>/}.length})" />
 						<ToolbarSpacer />
 						<Button text="Add Facility" press="FD_RoomDetails" type="Accept"/>
 						<Button text="Delete" press="HM_DeleteDetails" type="Reject" />
@@ -95,22 +96,18 @@
 				</headerToolbar>
 				<columns>
 					<Column demandPopin="true">
-						<Text text="Branch Code" />
-					</Column>
-					<Column demandPopin="true">
 						<Text text="Facility Name" />
 					</Column>
 					<Column demandPopin="true">
 						<Text text="Type" />
 					</Column>
-					<Column minScreenWidth="Tablet" demandPopin="true">
+					<Column  demandPopin="true">
 						<Text text="Price" />
 					</Column>
 				</columns>
 				<items>
 					<ColumnListItem type="Navigation" press="FD_onFacilityRowPress"> 
 						<cells>
-							<Text text="{Facilities>BranchCode}" />
 							<Text text="{Facilities>FacilityName}" />
 							<Text text="{Facilities>Type}" />
 							<Text text="{= ${Facilities>Price} ? ${Facilities>Price}+ ' ' + ${Facilities>Currency} + ' ' + ${Facilities>UnitText} : '' }"/>
