--- a/project1/webapp/css/style.css
+++ b/project1/webapp/css/style.css
@@ -1061,3 +1061,10 @@
     border-radius: 8px;
     box-shadow: 0 0 8px rgba(0,0,0,0.15);
 }
+
+.centerUPIImage {
+    display: block;
+    margin-left: auto;
+    margin-right: auto;
+}
+
