Bugs solved in bed and room

--- a/project1/webapp/view/Bed_Images.view.xml
+++ b/project1/webapp/view/Bed_Images.view.xml
@@ -162,7 +162,7 @@
                 <ObjectPageSection
                     titleUppercase="false"
                     id="purchaseOrderSection"
-                    title="Bed Images"
+                    title="Images"
                 >
                     <subSections>
                         <ObjectPageSubSection id="POO_Purchaseordersection">
